--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,6 +26,10 @@ body {
   font-family: "Pretendard";
 	line-height: 1;
 }
+a{
+	text-decoration: none;
+	color: #000;
+}
 ol, ul {
 	list-style: none;
 }
