--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,12 +13,16 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video, button {
+time, mark, audio, video{
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 1rem;
+	font-size: 100%;
 	vertical-align: baseline;
+}
+
+button{
+	font-size: 1rem;
 }
 
 article, aside, details, figcaption, figure, 
